other/a/add-imagepullsecrets-for-containers-and-initcontainers/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-imagepullsecrets-for-containers-and-initcontainers
policies:
- add-imagepullsecrets-for-containers-and-initcontainers.yaml
resources:
- resource.yaml
results:
- kind: Pod
  patchedResource: patchedResource1.yaml
  policy: add-imagepullsecrets-for-containers-and-initcontainers
  resources:
  - myapp-pod-1
  result: pass
  rule: add-imagepullsecret
- kind: Pod
  patchedResource: patchedResource2.yaml
  policy: add-imagepullsecrets-for-containers-and-initcontainers
  resources:
  - myapp-pod-2
  result: pass
  rule: add-imagepullsecret
- kind: Pod
  patchedResource: patchedResource3.yaml
  policy: add-imagepullsecrets-for-containers-and-initcontainers
  resources:
  - myapp-pod-3
  result: skip
  rule: add-imagepullsecret
- kind: Pod
  patchedResource: patchedResource4.yaml
  policy: add-imagepullsecrets-for-containers-and-initcontainers
  resources:
  - myapp-pod-4
  result: skip
  rule: add-imagepullsecret
